FIX: only update each list price based off config

--- a/site/templates/twig/items/vxm/xref/form/js/classes/Inputs.js.twig
+++ b/site/templates/twig/items/vxm/xref/form/js/classes/Inputs.js.twig
@@ -201,7 +201,10 @@ class VxmInputs {
 		listprice = listprice.toFixed(config.fields.listprice.precision);
 		this.margin.base.val(basemargin.toFixed(config.fields.unit_margin.precision));
 		this.listprice.val(listprice);
-		form.updateEachListPriceUsingOrdercodeCosting();
+		
+		if (config.basemarginchange.computeListpriceOrCost != config.options.basemarginchange.computeListpriceOrCost.listprice) {
+			form.updateEachListPriceUsingOrdercodeCosting();
+		}
 
 		callback();
 	}
