--- a/site/templates/twig/cart/lookup/form/input-itemid.twig
+++ b/site/templates/twig/cart/lookup/form/input-itemid.twig
@@ -7,7 +7,8 @@
 				'value': '',
 				'attributes': {
 					'placeholder': 'Item ID',
-					'aria-label':  'Item ID'
+					'aria-label':  'Item ID',
+					'data-jqv': 'true',
 				}
 			},
 			'button': {
