--- a/site/templates/twig/code-tables/mpo/cnfm/.js.twig
+++ b/site/templates/twig/code-tables/mpo/cnfm/.js.twig
@@ -53,7 +53,7 @@ $(function() {
 				form.submit();
 			} else {
 				server.validateCode(code, function(exists) {
-					var alert = CnfmAlerts.getInstance();
+					var alert = CodeAlerts.getInstance();
 					if (exists === false) {
 						form.submit();
 						return true;
