--- a/site/templates/twig/items/vxm/xref/form/js/classes/Form.js.twig
+++ b/site/templates/twig/items/vxm/xref/form/js/classes/Form.js.twig
@@ -61,6 +61,7 @@ class VxmForm {
 				form.inputs.itemid.attr('data-iskit', 'false');
 				form.inputs.itemid.attr('data-itemid', '');
 				form.enableDisableKit();
+				form.inputs.itemid.focus();
 			}
 		});
 	}
