--- a/site/templates/twig/items/vxm/xref/form/key.twig
+++ b/site/templates/twig/items/vxm/xref/form/key.twig
@@ -89,6 +89,7 @@
 							'placeholder': '',
 							'aria-label':  'Item ID',
 							'tabindex': item.itemid ? '-1' : '',
+							'data-jqv': 'true',
 							'data-itemid': item.itemid,
 							'data-iskit':  item.itemid ? (item.imitem.is_kit() ? 'true' : 'false') : '',
 							'data-standardcostbase': item.imitem.standardcostbasedon
