--- a/site/templates/twig/items/vxm/xref/form/js/classes/Form.js.twig
+++ b/site/templates/twig/items/vxm/xref/form/js/classes/Form.js.twig
@@ -43,9 +43,9 @@ class VxmForm {
 
 		requests.getItm(itemID, ['uom','iskit','pricing','standardcostbasedon'], function(item) {
 			var form = new VxmForm();
+			var itemcol = $('.item-col');
 
 			if (item) {
-				var itemcol = $('.item-col');
 				form.inputs.itemid.attr('data-iskit',  item.iskit ? 'true' : 'false');
 				form.inputs.itemid.attr('data-itemid', item.itemid);
 				form.inputs.itemid.attr('data-standardcostbase', item.standardcostbasedon.base);
@@ -57,12 +57,18 @@ class VxmForm {
 				form.inputs.uom.val(item.uom.purchase.code).change();
 				form.inputs.listprice.val(calculator.listprice(item.pricing.base, item.uom.purchase.conversion)).change();
 				form.enableDisableKit();
-			} else {
-				form.inputs.itemid.attr('data-iskit', 'false');
-				form.inputs.itemid.attr('data-itemid', '');
-				form.enableDisableKit();
-				form.inputs.itemid.focus();
+				return true;
 			}
+			form.inputs.itemid.attr('data-iskit', 'false');
+			form.inputs.itemid.attr('data-itemid', '');
+			form.enableDisableKit();
+			form.inputs.itemid.focus();
+			itemcol.find('.description').text('');
+			itemcol.find('.description2').text('');
+			itemcol.find('.uom-sale').text('');
+			$('.uom-sale-code').attr('data-conversion', 1);
+			$('.uom-sale-code').text('EACH');
+			form.inputs.uom.val('EACH').change();
 		});
 	}
 
