FEAT: remove sort indicators off address

--- a/site/templates/twig/api/lookup/customers/list.twig
+++ b/site/templates/twig/api/lookup/customers/list.twig
@@ -23,13 +23,7 @@
 					{% endif %}
 				</a>
 			</th>
-			<th scope="col">
-				<a href="{{ page.get_sortURL('address') }}" class="link sort">Address
-					{% if page.orderby_column == 'address' %}
-						<i class="fa fa-sort-alpha-{{ page.orderby_sort|lower }}" aria-hidden="true"></i>
-					{% endif %}
-				</a>
-			</th>
+			<th scope="col">Address</th>
 			<th scope="col">
 				<a href="{{ page.get_sortURL('city') }}" class="link sort">City
 					{% if page.orderby_column == 'city' %}
