FEAT: add salespersons, contacts

--- a/site/templates/twig/customers/ci/.new/customer/header.twig
+++ b/site/templates/twig/customers/ci/.new/customer/header.twig
@@ -13,9 +13,13 @@
 #}
 <div class="row mb-4">
 	<div class="col-sm-6">
-		<div class="mb-4">
+		<div class="mb-2">
 			{% include 'customers/ci/.new/customer/header/basic-info.twig' %}
 		</div>
+		<div class="mb-2">
+			{% include 'customers/ci/.new/customer/header/salespersons.twig' %}
+		</div>
+		{% include 'customers/ci/.new/customer/header/contact.twig' %}
 		{% include 'customers/ci/.new/customer/header/ar-data.twig' %}
 	</div>
 	<div class="col-sm-6">
