--- a/site/templates/twig/customers/ci/.new/customer/header/basic-info.twig
+++ b/site/templates/twig/customers/ci/.new/customer/header/basic-info.twig
@@ -11,15 +11,15 @@
 	customer.salesHistory   Propel\Runtime\Util\PropelModelPager of Sales History
 	customer.quotes         Propel\Runtime\Util\PropelModelPager of Quote
 #}
+{% set COUNTRIES = page.wire('modules').get('CodeTables').getCodeTable('mar', 'cocom') %}
+
 <div class="card border-light">
-	<div class="card-header bg-light">
-		<span class="h5">{{ customer.name }}</span>
-	</div>
 	<table class="table table-sm">
 		<tr>
 			<td class="font-weight-bold">Customer:</td>
 			<td>
-				{{ customer.id }} - {{ customer.name }}
+				{{ customer.id }} <br>
+				{{ customer.name }}
 			</td>
 		</tr>
 		<tr>
@@ -34,12 +34,9 @@
 					{{ customer.address3 }} <br>
 				{% endif %}
 
-				{{ customer.city ~ ', ' ~ customer.state ~ ' ' ~ customer.zip }}
+				{{ customer.city ~ ', ' ~ customer.state ~ ' ' ~ customer.zip }} <br>
+				{{ COUNTRIES.description(customer.country) }}
 			</td>
-		</tr>
-		<tr>
-			<td class="font-weight-bold">Salesperson:</td>
-			<td>{{ customer.salesperson1 }}</td>
 		</tr>
 		<tr>
 			<td class="font-weight-bold">Number of Shiptos:</td>
